--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1 class="logo-heading">Fun Bus</h1>
       <nav class="nav">
         <a class="nav-link" href="#">Home</a>
-        <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="#content-section">About Us</a>
         <a class="nav-link" href="#">Blog</a>
         <a class="nav-link" href="#">Contact</a>
       </nav>
@@ -60,7 +60,7 @@
     <section class="content-destination">
       <h2>Pick Your Destination</h2>
       <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-      <img src="img/destination.jpg" alt="Second slide">
+      <img src="img/destination.jpg" class="destination" alt="Second slide">
     </section>
     <section class="content-pick">
 
